# voxpress

./: .gitignore  DEPLOYMENT.md  PRODUCT_STRATEGY.md  README.md  RUNBOOK.md  SPEECHFOLIO_BRAND.md  voxpress-design.md
voxpress-api/: .env.example  .gitignore  ARCHITECTURE-DIAGRAMS.md  ARCHITECTURE.md  NOTES_2026-04-28.md  PR_PLAN.md  PR_PLAN_EXECUTABLE.md  README.md  REVIEW.md  REVIEW_v2.md  pyproject.toml
voxpress-api/alembic/: env.py
voxpress-api/alembic/versions/: 0acaea999e7e_add_idx_tasks_creator.py  7f3bdcda9c11_add_video_media_object_key.py  98faa810d482_init_schema.py  9c1c9e4d6f21_add_task_leases_and_artifacts.py  a4fbe9d2d5c4_add_avatar_url_to_creators.py  a7c9d2e4f6b1_add_article_topics.py  b4e3c9d8a1f2_add_article_entities.py  b9c2d6e4f1a0_add_running_system_job_unique.py  e2a9b7c4d1f0_allow_auto_task_trigger.py  (+6 more)
voxpress-api/tests/: test_article_writeback.py  test_auto_tasks.py  test_background_notes.py  test_background_notes_backfill.py  test_background_notes_live.py  test_corrector.py  test_douyin_titles.py  test_markdown.py  test_organize_density.py  test_prompt_settings_runtime.py  test_runtime_settings.py  test_settings_runtime_config.py  test_task_metrics.py  test_task_status.py  test_topic_taxonomy.py  test_url_resolve.py  test_worker_concurrency.py  test_youtube_rss.py  test_youtube_url.py  test_youtube_ytdlp.py
voxpress-api/voxpress/: auto_tasks.py  config.py  creator_backfill.py  creator_refresh.py  creator_sync.py  db.py  deploy_info.py  errors.py  main.py  markdown.py  media_store.py  models.py  prompts.py  runtime_settings.py  schemas.py  seed.py  sse.py  system_job_store.py  task_metrics.py  task_status.py  task_store.py  topic_taxonomy.py  url_resolve.py  worker.py  youtube_sync.py
voxpress-prompt-lab/: .env.example  .gitignore  README.md  pyproject.toml
voxpress-prompt-lab/cases/: README.md  _template.json
voxpress-prompt-lab/pl/: __init__.py  cli.py  config.py  diff.py  llm.py  pipeline.py  preprocess.py  runner.py
(+2269 files in other folders)
